--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@motionone/utils": "^10.17.0",
     "@nivo/core": "^0.86.0",
     "@nivo/pie": "^0.86.0",
     "@radix-ui/react-slot": "^1.0.2",
