--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.1.9",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.378.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.52.0",
     "react-redux": "^9.1.2",
     "react-router": "^6.23.0",
     "react-router-dom": "^6.23.0",
